--- a/client/public/main.css
+++ b/client/public/main.css
@@ -1,3 +1,20 @@
 body {
   margin-top: 30px;
+  display: flex;
+}
+
+.app {
+  display: flex;
+}
+
+.board {
+  display: flex;
+}
+
+.room-container {
+  flex: 1;
+}
+
+.users.container {
+  flex: 1;
 }
